--- a/projects/30_guitar_site/.gitignore
+++ b/projects/30_guitar_site/.gitignore
@@ -3,9 +3,21 @@
 .next/
 out/
 build
-dist
-.DS_Store
-*.pem
+public/
+package-lock.json
+
+# Prisma
+.env
+*.db
+prisma/db
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# Editor
+.vscode/
+.idea/
 
 # Logs
 logs
@@ -13,16 +25,22 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# Env
-.env*.local
+# OS
+.DS_Store
+Thumbs.db
 
-# Dependencies
+# Compiled output
+dist/
+tmp/
+out-tsc/
+bazel-out/
+
+# Node
 node_modules/
-.pnpm-store/
+npm-debug.log
+yarn-error.log
 
-# Prisma
-.prisma/client
-prisma/migrations
+# Tailwind
+.turbo
 ```
