--- a/projects/30_guitar_site/Dockerfile
+++ b/projects/30_guitar_site/Dockerfile
@@ -1,26 +1,15 @@
-```Dockerfile
-# Use the official Python image as the base image
-FROM python:3.9
+FROM python:3.9-slim
 
-# Set the working directory to /app
 WORKDIR /app
 
-# Copy the requirements file into the container
 COPY requirements.txt .
-
-# Install the Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the application code into the container
 COPY . .
 
-# Build the Vue.js frontend
 RUN npm install --prefix frontend
 RUN npm run build --prefix frontend
 
-# Expose the port that the FastAPI server will run on
-EXPOSE 8000
+ENV PYTHONPATH=/app
 
-# Set the command to start the FastAPI server
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
-```
