--- a/projects/30_guitar_site/package.json
+++ b/projects/30_guitar_site/package.json
@@ -10,23 +10,22 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
-    "@prisma/client": "^4.10.1",
+    "@prisma/client": "^4.9.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "bcrypt": "^5.1.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "jsonwebtoken": "^9.0.0",
     "next": "13.1.6",
+    "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "prisma": "^4.10.1",
-    "tailwindcss": "^3.2.4"
+    "prisma": "^4.9.0"
   }
 }
