--- a/projects/30_guitar_site/requirements.txt
+++ b/projects/30_guitar_site/requirements.txt
@@ -1,10 +1,11 @@
-Here's the requirements.txt file for the Guitar Site project:
+Here is the requirements.txt file for the Guitar Site project:
 
-fastapi==0.68.1
-uvicorn==0.15.0
-sqlalchemy==1.4.27
-psycopg2-binary==2.9.2
-pydantic==1.8.2
+fastapi==0.78.0
+uvicorn==0.17.6
+sqlalchemy==1.4.39
+psycopg2-binary==2.9.3
+pydantic==1.9.1
+bcrypt==3.2.0
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
 python-multipart==0.0.5
+email-validator==1.2.1
